# TrafficMonitor-DeepSeek-Balance

./: .gitignore  CMakeLists.txt  README.md  build_plugin.bat
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-03-deepseek-balance-plugin.md
docs/superpowers/specs/: 2026-05-03-deepseek-balance-plugin-design.md
src/: Config.cpp  Config.h  DeepSeekItem.cpp  DeepSeekItem.h  DeepSeekPlugin.cpp  DeepSeekPlugin.h  HttpClient.cpp  HttpClient.h  dllmain.cpp
